ft: added applications saving + updated screening functionalities
