# src/routers/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health.route";
 import jobsRouter from "./jobs.route";
 import talentRouter from "./talents.route";
 import screeningRouter from "./screening.route";
+import applicationRouter from "./application.route";
 
 const router = Router();
 
@@ -10,5 +11,6 @@ router.use("/health", healthRouter);
 router.use("/jobs", jobsRouter);
 router.use("/talents", talentRouter);
 router.use("/screening", screeningRouter);
+router.use("/applications", applicationRouter);
 
 export default router;
